# citadel

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile.test  LICENSE-APACHE  README.md  SECURITY.md  pyproject.toml
citadel/: Cargo.toml
citadel-cli/: Cargo.toml  README.md
citadel-cli/src/: commands.rs  formatter.rs  helper.rs  lib.rs  main.rs  repl.rs
citadel-cli/tests/: cli.rs
citadel/benches/: kv_bench.rs
citadel/src/: atom_store.rs  atom_store_tests.rs  audit.rs  builder.rs  database.rs  key_codec.rs  lib.rs  region_store.rs  region_store_tests.rs
citadel/tests/: audit_log.rs  audit_torture.rs  backup.rs  btree_oracle.rs  btree_reference.rs  btree_torture.rs  compaction.rs  diff_engine.rs  diff_torture.rs  encryption_roundtrip.rs  fips.rs  integrity.rs  key_backup.rs  key_rotation.rs  kv_torture.rs  merkle.rs  merkle_sync.rs  merkle_torture.rs  multi_table_sync.rs  named_table_merkle.rs  named_table_reader.rs  named_tables.rs  patch_torture.rs  peer_to_peer.rs  public_api.rs  region_store_concurrency.rs  sync_patch.rs  sync_session.rs  sync_torture.rs  table_enumeration.rs  transactions.rs
crates/citadel-ai/: .gitignore  Cargo.toml  README.md
crates/citadel-ai/src/: agent.rs  budget.rs  graph.rs  lib.rs  llm.rs  mcp.rs  prompts.rs  propose.rs  tools.rs  verify.rs
crates/citadel-ai/tests/: discovery_controller.rs  ollama_live.rs  recall_quality.rs
crates/citadel-buffer/: Cargo.toml  README.md
crates/citadel-buffer/src/: allocator.rs  allocator_tests.rs  btree.rs  btree_tests.rs  cursor.rs  cursor_tests.rs  lib.rs  pool.rs  pool_tests.rs  sieve.rs  sieve_tests.rs
crates/citadel-core/: Cargo.toml  README.md
crates/citadel-core/src/: constants.rs  constants_tests.rs  error.rs  error_tests.rs  lib.rs  types.rs  types_tests.rs
crates/citadel-crypto/: Cargo.toml  README.md
crates/citadel-crypto/benches/: crypto_bench.rs
crates/citadel-crypto/src/: blob_seal.rs  blob_seal_tests.rs  hkdf_utils.rs  hkdf_utils_tests.rs  kdf.rs  kdf_tests.rs  key_backup.rs  key_backup_tests.rs  key_manager.rs  key_manager_tests.rs  lib.rs  mac.rs  mac_tests.rs  page_cipher.rs  page_cipher_tests.rs
crates/citadel-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  citadel.h
crates/citadel-ffi/src/: lib.rs  lib_tests.rs
crates/citadel-io/: Cargo.toml  README.md
crates/citadel-io/src/: durable.rs  durable_tests.rs  file_lock.rs  file_lock_tests.rs  file_manager.rs  file_manager_tests.rs  lib.rs  memory_io.rs  memory_io_tests.rs  mmap_io.rs  mmap_io_tests.rs  sync_io.rs  traits.rs  uring_io.rs  uring_io_tests.rs
crates/citadel-io/tests/: memory_io_torture.rs
crates/citadel-mcp/: Cargo.toml  README.md
crates/citadel-mcp/src/: lib.rs  protocol.rs  serve.rs  types.rs
crates/citadel-mcp/tests/: gpu_recall.rs  stdio_handshake.rs
crates/citadel-mem/: Cargo.toml  README.md
crates/citadel-mem/benches/: recall_bench.rs
crates/citadel-mem/src/: candle.rs  embed.rs  engine.rs  engine_tests.rs  error.rs  fusion.rs  lib.rs  profile.rs  types.rs
crates/citadel-mem/tests/: ann_persist_region.rs  bm25_keyword.rs  encryption_roundtrip.rs  graph.rs  lifecycle.rs  long_horizon_recall.rs  overflow.rs  per_atom_erasure.rs  region_erasure.rs  remember_recall.rs  sealed_recall_ann.rs  secure_delete.rs  structural.rs
crates/citadel-membench/: .gitignore  Cargo.toml  README.md  RESULTS.md  RUNBOOK.md  judge-probe.ps1  run.ps1  selfaudit.ps1  watch.ps1
crates/citadel-membench/src/: dataset.rs  eval.rs  ingest.rs  lib.rs  ratelimit.rs
crates/citadel-membench/tests/: harness.rs  longmemeval.rs
crates/citadel-page/: Cargo.toml  README.md
crates/citadel-page/src/: branch_node.rs  branch_node_tests.rs  leaf_node.rs  leaf_node_tests.rs  lib.rs  overflow.rs  overflow_tests.rs  page.rs  page_tests.rs
crates/citadel-python/: Cargo.toml
crates/citadel-python/src/: agent.rs  errors.rs  graph.rs  lib.rs  llm.rs  mcp.rs  mem.rs  sql.rs  tools.rs  vector.rs  verify.rs
crates/citadel-sql/: Cargo.toml  README.md
crates/citadel-sql/benches/: batch_bench.rs  h2h_bench.rs
crates/citadel-sql/src/: connection.rs  datetime.rs  datetime_tests.rs  dialect.rs  dialect_tests.rs  encoding.rs  encoding_tests.rs  error.rs  eval.rs  eval_tests.rs  executor.rs  fts.rs  fts_tests.rs  json.rs  json_tests.rs  lib.rs  parser.rs  parser_tests.rs  planner.rs  planner_tests.rs  prepared.rs  schema.rs  schema_tests.rs  system_tables.rs  types.rs  types_tests.rs
crates/citadel-sql/tests/: alter_table.rs  ann_filtered.rs  ann_index_ddl.rs  ann_persist.rs  ann_query.rs  collate.rs  concurrency_torture.rs  constraint_torture.rs  constraints.rs  correlated.rs  correlated_torture.rs  cte.rs  cte_torture.rs  datetime.rs  datetime_torture.rs  deferrable_fk.rs  edge_cases.rs  explain.rs  explain_torture.rs  fts.rs  fts_inverted.rs  fts_query.rs  fts_ranking.rs  fts_torture.rs  functions.rs  functions_torture.rs  generated_columns.rs  generated_columns_torture.rs  indexes.rs  indexes_torture.rs  insert_select.rs  insert_select_torture.rs  integration.rs  join_torture.rs  joins.rs  json.rs  json_gin.rs  json_path.rs  json_path_tz_ops.rs  json_path_tz_torture.rs  (+37 more)
crates/citadel-swe/: .gitignore  Cargo.toml
crates/citadel-swe/src/: lib.rs
crates/citadel-swe/swe-tasks/: .gitignore  README.md
crates/citadel-swe/tests/: mini_swe.rs
crates/citadel-sync/: Cargo.toml  README.md
crates/citadel-sync/src/: apply.rs  apply_tests.rs  crdt.rs  crdt_tests.rs  diff.rs  diff_tests.rs  hlc.rs  hlc_tests.rs  lib.rs  local_reader.rs  memory_transport.rs  memory_transport_tests.rs  node_id.rs  node_id_tests.rs  noise_transport.rs  noise_transport_tests.rs  patch.rs  patch_tests.rs  protocol.rs  protocol_tests.rs  session.rs  sync_key.rs  sync_key_tests.rs  tcp_transport.rs  tcp_transport_tests.rs  transport.rs
crates/citadel-txn/: Cargo.toml  README.md
crates/citadel-txn/src/: catalog.rs  catalog_tests.rs  integrity.rs  lib.rs  manager.rs  merkle.rs  (+12 more)
crates/citadel-vector/: Cargo.toml  README.md
crates/citadel-wasm/: .gitignore  Cargo.toml  README.md
crates/sql-json-path/: Cargo.toml  NOTICE  README.md
(+260 files in other folders)
