[workspace]
members = [
    "crates/citadel-core",
    "crates/citadel-crypto",
    "crates/citadel-io",
    "crates/citadel-page",
    "crates/citadel-buffer",
    "crates/citadel-txn",
    "crates/citadel-sql",
    "crates/citadel-sync",
    "crates/citadel-ffi",
    "crates/citadel-wasm",
    "citadel",
    "citadel-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Yuriy Peysakhov"]
repository = "https://github.com/yp3y5akh0v/citadel"
homepage = "https://github.com/yp3y5akh0v/citadel"
keywords = ["database", "embedded-database", "encryption", "encrypted-database", "b-plus-tree"]
categories = ["database-implementations", "cryptography"]

[workspace.dependencies]
# Internal crates (package = crates.io name, key = Rust alias)
citadel-core = { package = "citadeldb-core", path = "crates/citadel-core", version = "0.1.0" }
citadel-crypto = { package = "citadeldb-crypto", path = "crates/citadel-crypto", version = "0.1.0" }
citadel-io = { package = "citadeldb-io", path = "crates/citadel-io", version = "0.1.0" }
citadel-page = { package = "citadeldb-page", path = "crates/citadel-page", version = "0.1.0" }
citadel-buffer = { package = "citadeldb-buffer", path = "crates/citadel-buffer", version = "0.1.0" }
citadel-txn = { package = "citadeldb-txn", path = "crates/citadel-txn", version = "0.1.0" }
citadel-sync = { package = "citadeldb-sync", path = "crates/citadel-sync", version = "0.1.0" }
citadel = { package = "citadeldb", path = "citadel", version = "0.1.0" }
citadel-sql = { package = "citadeldb-sql", path = "crates/citadel-sql", version = "0.1.0" }

# Crypto
aes = "0.8"
ctr = "0.9"
chacha20 = "0.9"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
argon2 = "0.5"
aes-kw = "0.2"
pbkdf2 = "0.12"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
snow = { version = "0.10", default-features = false, features = ["default-resolver", "default-resolver-crypto"] }
base64 = "0.22"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh64"] }
blake3 = "1"

# Error handling
thiserror = "2.0"

# Sync
parking_lot = "0.12"

# I/O
libc = "0.2"
io-uring = "0.7"

# Cipher traits
cipher = "0.4"

# SQL
sqlparser = "0.61"
lru = "0.12"

# CLI
rustyline = "17"
comfy-table = "7"
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
rpassword = "7"
dirs = "6"
serde_json = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
