[workspace]
members = [
    "crates/citadel-core",
    "crates/citadel-crypto",
    "crates/citadel-io",
    "crates/citadel-page",
    "crates/citadel-buffer",
    "crates/citadel-txn",
    "crates/citadel-sql",
    "crates/citadel-sync",
    "crates/citadel-ffi",
    "crates/citadel-wasm",
    "crates/sql-json-path",
    "crates/citadel-vector",
    "crates/citadel-mem",
    "crates/citadel-ai",
    "crates/citadel-mcp",
    "crates/citadel-membench",
    "citadel",
    "citadel-cli",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Yuriy Peysakhov"]
repository = "https://github.com/yp3y5akh0v/citadel"
homepage = "https://citadeldb.dev"

[workspace.dependencies]
# Package name on crates.io differs from Rust alias (e.g. citadeldb-core / citadel_core).
citadel-core = { package = "citadeldb-core", path = "crates/citadel-core", version = "1.1.0" }
citadel-crypto = { package = "citadeldb-crypto", path = "crates/citadel-crypto", version = "1.1.0" }
citadel-io = { package = "citadeldb-io", path = "crates/citadel-io", version = "1.1.0" }
citadel-page = { package = "citadeldb-page", path = "crates/citadel-page", version = "1.1.0" }
citadel-buffer = { package = "citadeldb-buffer", path = "crates/citadel-buffer", version = "1.1.0" }
citadel-txn = { package = "citadeldb-txn", path = "crates/citadel-txn", version = "1.1.0" }
citadel-sync = { package = "citadeldb-sync", path = "crates/citadel-sync", version = "1.1.0" }
citadel = { package = "citadeldb", path = "citadel", version = "1.1.0" }
citadel-sql = { package = "citadeldb-sql", path = "crates/citadel-sql", version = "1.1.0" }
citadel-vector = { package = "citadeldb-vector", path = "crates/citadel-vector", version = "1.1.0" }
citadel-mem = { package = "citadeldb-mem", path = "crates/citadel-mem", version = "1.1.0" }
citadel-ai = { package = "citadeldb-ai", path = "crates/citadel-ai", version = "1.1.0" }
citadel-mcp = { package = "citadeldb-mcp", path = "crates/citadel-mcp", version = "1.1.0" }
citadel-membench = { package = "citadeldb-membench", path = "crates/citadel-membench", version = "1.1.0" }

aes = "0.8"
ctr = "0.9"
chacha20 = "0.9"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
argon2 = "0.5"
aes-kw = "0.2"
pbkdf2 = "0.12"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
snow = { version = "0.10", default-features = false, features = ["default-resolver", "default-resolver-crypto"] }
base64 = "0.22"

xxhash-rust = { version = "0.8", features = ["xxh64"] }
blake3 = "1"
rustc-hash = "2.1"

thiserror = "2.0"

parking_lot = "0.12"
rayon = "1.10"

libc = "0.2"
io-uring = "0.7"
memmap2 = "0.9"

cipher = "0.4"

sqlparser = "0.61"
lru = "0.12"
compact_str = "0.8"

jiff = { version = "0.2", default-features = false, features = ["std", "alloc", "serde", "perf-inline", "tz-system", "tzdb-zoneinfo", "tzdb-bundle-platform"] }

criterion = { version = "0.5", features = ["html_reports"] }
rusqlite = { version = "0.39", features = ["bundled"] }
mimalloc = "0.1"

rustyline = "17"
comfy-table = "7"
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
rpassword = "7"
dirs = "6"
serde_json = "1"
ureq = { version = "3", features = ["json"] }
wait-timeout = "0.2"
sql-json-path = { package = "citadeldb-sql-json-path", path = "crates/sql-json-path", version = "1.1.0" }
tantivy-stemmers = "0.4"
unicode-normalization = "0.1"
unicode-segmentation = "1.12"

# candle/gemm matmul is unusable at opt-level 0; optimize deps (not our crates) in dev.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
