[package]
name = "citadeldb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Interactive SQL shell for Citadel encrypted database"
readme = "README.md"

[[bin]]
name = "citadel"
path = "src/main.rs"

[features]
default = ["audit-log"]
audit-log = ["citadel/audit-log"]
fips = ["citadel/fips"]
io-uring = ["citadel/io-uring"]

[dependencies]
citadel = { workspace = true }
citadel-sql = { workspace = true }
citadel-core = { workspace = true }

rustyline = { workspace = true }
comfy-table = { workspace = true }
clap = { workspace = true }
owo-colors = { workspace = true }
rpassword = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
