[package]
name = "citadel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Citadel: encrypted-first embedded database engine"

[dependencies]
citadel-core = { workspace = true }
citadel-crypto = { workspace = true }
citadel-io = { workspace = true }
citadel-page = { workspace = true }
citadel-buffer = { workspace = true }
citadel-txn = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
