[package]
name = "citadeldb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Citadel: encrypted-first embedded database engine"
readme = "../README.md"

[features]
default = ["audit-log"]
io-uring = ["citadel-io/io-uring"]
fips = ["citadel-crypto/fips"]
audit-log = ["dep:hmac", "dep:sha2", "dep:parking_lot"]

[dependencies]
citadel-core = { workspace = true }
citadel-crypto = { workspace = true }
citadel-io = { workspace = true }
citadel-page = { workspace = true }
citadel-buffer = { workspace = true }
citadel-txn = { workspace = true }
citadel-sync = { workspace = true }
rand = { workspace = true }
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
blake3 = { workspace = true }
