[package]
name = "citadeldb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types, errors, and constants for Citadel encrypted database"
readme = "README.md"

[lib]
name = "citadel_core"

[dependencies]
thiserror = { workspace = true }
