[package]
name = "citadel-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "C FFI bindings for Citadel encrypted database"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
citadel = { path = "../../citadel" }
citadel-core = { workspace = true }
citadel-sql = { path = "../citadel-sql" }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cbindgen = "0.27"
