[package]
name = "citadeldb-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "C FFI bindings for Citadel encrypted database"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
citadel = { workspace = true }
citadel-core = { workspace = true }
citadel-sql = { workspace = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cbindgen = "0.27"
