[package]
name = "citadel-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "I/O layer for Citadel: PageIO trait, sync I/O, file locking, file management"

[dependencies]
citadel-core = { workspace = true }
xxhash-rust = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
tempfile = "3"
