[package]
name = "citadeldb-membench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["benchmark", "memory", "evaluation", "conversational", "locomo"]
categories = ["development-tools"]
description = "LoCoMo long-term-conversational-memory benchmark harness for citadel-mem"
readme = "README.md"
publish = false

[lib]
name = "citadel_membench"

[dependencies]
citadel-mem = { workspace = true }
citadel-ai = { workspace = true }
citadel = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
sha2 = { workspace = true }
# A bin target cannot see dev-dependencies, so this is a normal dep (used by both).
tempfile = "3"

[dev-dependencies]
# Test/bench targets (tests/harness.rs) need the `testing` toolkit; the `locomo`
# bin (a normal build) must NOT get test-util, keeping it out of the shipped path.
citadel-ai = { workspace = true, features = ["test-util"] }

[features]
openai = ["citadel-ai/openai"]
claude = ["citadel-ai/claude"]
ollama = ["citadel-ai/ollama"]
# Gemini reader via its OpenAI-compatible endpoint; implies openai (the bin's
# required-feature, and the gpt-4o-mini judge backend).
gemini = ["openai", "citadel-ai/gemini"]
candle-embed = ["citadel-mem/candle-embed"]
# Run the embedder + cross-encoder on the GPU (CUDA); implies candle-embed. Needs the CUDA toolkit.
cuda-embed = ["candle-embed", "citadel-mem/cuda-embed"]

# The live runners need openai + candle-embed; gating keeps default/CI builds network-free.
[[bin]]
name = "locomo"
required-features = ["openai", "candle-embed"]

[[bin]]
name = "longmemeval"
required-features = ["openai", "candle-embed"]
