[package]
name = "citadeldb-page"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Page format, serialization, and checksum for Citadel B+ tree pages"
readme = "README.md"

[lib]
name = "citadel_page"

[dependencies]
citadel-core = { workspace = true }
xxhash-rust = { workspace = true }
