[package]
name = "citadeldb-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SQL engine for Citadel encrypted database"
readme = "README.md"

[dependencies]
citadel-core = { workspace = true }
citadel-txn = { workspace = true }
citadel = { workspace = true }
sqlparser = { workspace = true }
thiserror = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
tempfile = "3"
