[package]
name = "citadeldb-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SQL parser, planner, and executor for Citadel encrypted database"
readme = "README.md"

[lib]
name = "citadel_sql"

[dependencies]
citadel-core = { workspace = true }
citadel-txn = { workspace = true }
citadel = { workspace = true }
sqlparser = { workspace = true }
thiserror = { workspace = true }
lru = { workspace = true }
compact_str = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }
citadel-crypto = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
mimalloc = { workspace = true }

[[bench]]
name = "h2h_bench"
harness = false
