[package]
name = "citadeldb-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["sql", "database", "query-engine", "sql-parser", "transactions"]
categories = ["database-implementations", "database", "parsing", "encoding"]
description = "SQL parser, planner, and executor for Citadel encrypted database"
readme = "README.md"

[lib]
name = "citadel_sql"

[dependencies]
citadel-core = { workspace = true }
citadel-buffer = { workspace = true }
citadel-txn = { workspace = true }
citadel = { workspace = true }
citadel-vector = { workspace = true }
blake3 = { workspace = true }
sqlparser = { workspace = true }
thiserror = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
compact_str = { workspace = true }
jiff = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
sql-json-path = { workspace = true }
tantivy-stemmers = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
jiff = { workspace = true, features = ["js"] }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }
citadel-crypto = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
mimalloc = { workspace = true }

[[bench]]
name = "h2h_bench"
harness = false

[[bench]]
name = "batch_bench"
harness = false
