[package]
name = "citadeldb-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Replication and sync layer for Citadel encrypted database"
readme = "README.md"

[lib]
name = "citadel_sync"

[dependencies]
citadel-core = { workspace = true }
citadel-page = { workspace = true }
citadel-txn = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
snow = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
citadel-io = { workspace = true }
tempfile = "3"
