[package]
name = "citadel-txn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Transaction manager with MVCC, commit protocol, and pending-free chain for Citadel"

[dependencies]
citadel-core = { workspace = true }
citadel-crypto = { workspace = true }
citadel-io = { workspace = true }
citadel-page = { workspace = true }
citadel-buffer = { workspace = true }
parking_lot = { workspace = true }
