[package]
name = "citadeldb-txn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["database", "mvcc", "transactions", "snapshot-isolation", "shadow-paging"]
categories = ["database-implementations", "cryptography"]
description = "Transaction manager with MVCC, commit protocol, and pending-free chain for Citadel"
readme = "README.md"

[lib]
name = "citadel_txn"

[dependencies]
citadel-core = { workspace = true }
citadel-crypto = { workspace = true }
citadel-io = { workspace = true }
citadel-page = { workspace = true }
citadel-buffer = { workspace = true }
parking_lot = { workspace = true }
blake3 = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true, optional = true }

[features]
default = []
parallel = ["dep:rayon"]
